specs/001-typescript-to-zig-native/examples/valid/string-equality.ts
if ("lumen" == "lumen") {
  console.log("same");
}
