specs/001-typescript-to-zig-native/examples/invalid/do-while-condition-type.ts
do {
  console.log("once");
} while ("again");
